<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaLogin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/cinza_escuro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="137dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/fastparking_logo" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/edit_usuario"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/edit_senha"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/primary_yellow"
        android:text="@string/btn_entrar"
        android:textColor="@color/cinza_super_escuro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/text_warning"
        android:textColor="@color/white" />

</LinearLayout>