<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/cinza_escuro"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".75"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".25"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".5"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1504788" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6319152" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.751026" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.801026" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toTopOf="@+id/h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@drawable/dashed_line_shape"
        app:layout_constraintBottom_toTopOf="@+id/h" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/user" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/black_fade"
            android:text="@string/btn_editar"
            android:textSize="12sp"
            android:layout_marginTop="95dp"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome do Cliente:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@+id/nameUser" />

<!--                                                          -->

    <TextView
        android:id="@+id/phoneUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Telefone:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/nameUser"
        app:layout_constraintTop_toTopOf="@+id/h2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneUser" />

<!--                                                            -->

    <TextView
        android:id="@+id/emailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/phoneUser"
        app:layout_constraintTop_toTopOf="@+id/h7" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/emailUser"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h9">

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/laranja_claro"
            android:text="@string/btn_salvar"
            android:textColor="@color/cinza_super_escuro" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/laranja_claro"
            android:text="@string/btn_voltar"
            android:textColor="@color/cinza_super_escuro" />

    </LinearLayout>

    <Button
        android:id="@+id/previousBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="transparent"
        android:text="@string/btn_sair"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v3"
        app:layout_constraintTop_toBottomOf="@+id/h10" />


</androidx.constraintlayout.widget.ConstraintLayout>